[tool.poetry]
name = "nps"
version = "0.1.0"
description = ""
authors = ["Florent Chenebault <florent.chenebault@lifen.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
pydevlake = { path = "../../pydevlake", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
